--- a/TaskManagementApp/Pages/LoginPage.xaml
+++ b/TaskManagementApp/Pages/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:TaskManagementApp.ViewModels"
              x:Class="TaskManagementApp.Pages.LoginPage"
              x:DataType="viewmodels:LoginViewModel"
-             Title="LoginPage">
+             Title="Login">
 
     <ContentPage.BindingContext>
         <viewmodels:LoginViewModel />
