--- a/TaskManagementApp/Pages/LoginPage.xaml
+++ b/TaskManagementApp/Pages/LoginPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:TaskManagementApp.ViewModels"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels=""
              x:Class="TaskManagementApp.Pages.LoginPage"
              x:DataType="viewmodels:LoginViewModel"
              Title="LoginPage">
