--- a/TaskManagementApp/Pages/LoginPage.xaml
+++ b/TaskManagementApp/Pages/LoginPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:viewmodels="clr-namespace:TaskManagement.Infrastructure.ViewModels;assembly=TaskManagment.Infrastructure"
+             xmlns:viewmodels="clr-namespace:TaskManagement.Infrastructure.ViewModels;assembly=TaskManagement.Infrastructure"
              x:Class="TaskManagementApp.Pages.LoginPage"
              x:DataType="viewmodels:LoginViewModel"
              Title="Sign In">
