--- a/TaskManagementApp/Pages/LoginPage.xaml
+++ b/TaskManagementApp/Pages/LoginPage.xaml
@@ -9,10 +9,10 @@
     <VerticalStackLayout Spacing="8" Padding="16, 8">
 
         <Entry Placeholder="Login"
-               Text="{Binding Login, Mode=OneWayToSource}" />
+               Text="{Binding Login, Mode=TwoWay}" />
 
         <Entry Placeholder="Password"
-               Text="{Binding Password, Mode=OneWayToSource}"/>
+               Text="{Binding Password, Mode=TwoWay}"/>
 
         <Button Text="Sign In"
                 Margin="0, 8, 0, 0"
