--- a/TaskManagementWin/App.xaml
+++ b/TaskManagementWin/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="TaskManagementWin.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TaskManagementWin">
+             xmlns:local="clr-namespace:TaskManagementWin"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
