--- a/TaskManagementWin/Pages/WelcomePage.xaml
+++ b/TaskManagementWin/Pages/WelcomePage.xaml
@@ -3,13 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TaskManagementWin.Pages"
+      xmlns:local="clr-namespace:TaskManagementWin.Pages" xmlns:controls="clr-namespace:TaskManagementWin.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="WelcomePage"
       Background="White">
 
     <Grid>
+        <controls:MainMenu />
+
         <Label VerticalAlignment="Center" HorizontalAlignment="Center" Content="Welcome to Task Management App"/>
     </Grid>
 </Page>
