--- a/TaskManagementApp/AppShell.xaml
+++ b/TaskManagementApp/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:TaskManagementApp.Pages"
-    xmlns:vm="clr-namespace:TaskManagement.Infrastructure.ViewModels;assembly=TaskManagement.Infrastructure"
+    xmlns:vm="clr-namespace:TaskManagementApp.ViewModels"
     x:DataType="vm:AppShellViewModel"
     Shell.FlyoutBehavior="Disabled">
 
