--- a/TaskManagementApp/AppShell.xaml
+++ b/TaskManagementApp/AppShell.xaml
@@ -4,19 +4,40 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:TaskManagementApp.Pages"
+    xmlns:vm="clr-namespace:TaskManagementApp.ViewModels"
+    x:DataType="vm:AppShellViewModel"
     Shell.FlyoutBehavior="Disabled">
+
+    <Shell.Triggers>
+        <DataTrigger TargetType="Shell"
+                     Binding="{Binding IsAuthenticated}"
+                     Value="True">
+            <Setter Property="FlyoutBehavior" Value="Flyout" />
+        </DataTrigger>
+
+    </Shell.Triggers>
 
     <ShellContent
         Title="Loading"
         ContentTemplate="{DataTemplate pages:LoadingPage}"
-        Route="loading" />
+        Route="loading"
+        Shell.FlyoutItemIsVisible="False"/>
     <ShellContent
         Title="Login"
         ContentTemplate="{DataTemplate pages:LoginPage}"
-        Route="login" />
+        Route="login"
+        Shell.FlyoutItemIsVisible="False"/>
     <ShellContent
-        Title="Welcome"
+        Title="Home"
         ContentTemplate="{DataTemplate pages:WelcomePage}"
-        Route="welcome" />
+        Route="welcome"/>
+    <ShellContent
+        Title="Teams"
+        ContentTemplate="{DataTemplate pages:TeamsPage}"
+        Route="teams"/>
+
+    <MenuItem
+        Text="Log Out"
+        Command="{Binding LogoutCommand}"/>
 
 </Shell>
